--- a/Memoria.tex
+++ b/Memoria.tex
@@ -1,5 +1,9 @@
 \documentclass[oneside,a4paper,12pt]{book}
 \usepackage{subcaption}
+\usepackage[lmargin=2.8cm, rmargin=2.8cm, tmargin=3.3cm, bmargin=3.3cm]{geometry}
+\linespread{1.1}
+\setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
+
 
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel} % espanol
