--- a/1-introduccion.tex
+++ b/1-introduccion.tex
@@ -105,7 +105,7 @@ La compañía eléctrica Endesa ha comprado una flota de catorce drones para la 
 \centering
 \includegraphics[width=0.8\textwidth]{dronendesa}
 \caption{Drone de Endesa realizando labores de revisión.}
-\label{fig:lily}
+\label{fig:droneendesa}
 \end{figure}
 
 
@@ -297,7 +297,7 @@ ArDroneServer es un envoltorio para la plataforma JdeRobot que pertenece a la SD
 \centering
 \includegraphics[width=0.9\textwidth]{ardroneserver_alberto}
 \caption{Seguimiento horizontal usando ardrone\_server.}
-\label{fig:introrobuavjs}
+\label{fig:ardroneserveralberto}
 \end{figure}
 
 \subsection{Surveillance 4.0}
